RESOLVED FIXED307480
multimedia.scmp.com: South China Morning Post page has slow frames in Safari
https://bugs.webkit.org/show_bug.cgi?id=307480
Summary multimedia.scmp.com: South China Morning Post page has slow frames in Safari
Matt Woodrow
Reported 2026-02-10 15:41:12 PST
<rdar://78428883> This page has very slow frames, and calls into the WebKit pattern callback repeatedly.
Attachments
Matt Woodrow
Comment 1 2026-02-10 15:50:10 PST
EWS
Comment 2 2026-02-12 17:59:57 PST
Committed 307423@main (2d3b23928cdb): <https://commits.webkit.org/307423@main> Reviewed commits have been landed. Closing PR #58340 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.