multimedia.scmp.com: South China Morning Post page has slow frames in Safari. https://bugs.webkit.org/show_bug.cgi?id=307480 <rdar://78428883>

Reviewed by Simon Fraser.

Use CGPatternCreateWithImageTransformStep to create an image pattern with step size,
rather than creating a callback pattern.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebCore/Configurations/AllowedSPI.toml:
* Source/WebCore/PAL/pal/cg/CoreGraphicsSoftLink.cpp:
* Source/WebCore/PAL/pal/cg/CoreGraphicsSoftLink.h:
* Source/WebCore/PAL/pal/spi/cg/CoreGraphicsSPI.h:
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::drawPattern):
* Source/WebCore/platform/graphics/cg/PatternCG.cpp:
(WebCore::Pattern::createPlatformPattern const):

Canonical link: https://commits.webkit.org/307423@main