Source/WebCore/PAL/pal/spi/cg/CoreGraphicsSPI.h
@@ -419,6 +419,11 @@ CGShadingRef CGShadingCreateConic(CGColorSpaceRef, CGPoint center, CGFloat angle
 CGGradientRef CGGradientCreateWithColorComponentsAndOptions(CGColorSpaceRef, const CGFloat*, const CGFloat*, size_t, CFDictionaryRef);
 CGGradientRef CGGradientCreateWithColorsAndOptions(CGColorSpaceRef, CFArrayRef, const CGFloat*, CFDictionaryRef);
 
+#if HAVE(CGPATTERN_CREATE_WITH_IMAGE_TRANSFORM_STEP)
+CGPatternRef CGPatternCreateWithImageTransformStep(CGImageRef, CGAffineTransform,
+    CGFloat xStep, CGFloat yStep, CGPatternTiling);
+#endif
+
 extern const CFStringRef kCGGradientInterpolatesPremultiplied;
 
 CGStyleRef CGStyleCreateShadow2(CGSize offset, CGFloat radius, CGColorRef);
